--- a/index.html
+++ b/index.html
@@ -527,8 +527,7 @@
                         <span class="skill-tag">Computer Networks</span>
                         <span class="skill-tag">DBMS</span>
                         <span class="skill-tag">Artificial Intelligence</span>
-                        <span class="skill-tag">OOP</span>
-                        <span class="skill-tag">Web Development</span>
+                        <span class="skill-tag">OOPS</span>
                     </div>
                 </div>
                 <div class="skill-category fade-in">
